Auto height for images in organogram to prevent squashing

--- a/app/assets/stylesheets/peoplefinder/organogram.scss
+++ b/app/assets/stylesheets/peoplefinder/organogram.scss
@@ -40,6 +40,9 @@
     border-radius: 50%;
     .maginot {
       margin: 0 auto;
+      img {
+        height: auto;
+      }
     }
   }
   .leader {
